chore/update api responses (#25)
