# src/services/roles/domain/role.entity.ts
@@ -1,0 +1,8 @@
+export class RoleEntity {
+  constructor(
+    public id: string,
+    public rol_name: string,
+    public rol_description: string | null,
+    public rol_weight: number | null,
+  ) {}
+}
